; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/tegra/extr_clk-pll-out.c_clk_pll_out_is_enabled.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/tegra/extr_clk-pll-out.c_clk_pll_out_is_enabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.tegra_clk_pll_out = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk_hw*)* @clk_pll_out_is_enabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clk_pll_out_is_enabled(%struct.clk_hw* %0) #0 {
  %2 = alloca %struct.clk_hw*, align 8
  %3 = alloca %struct.tegra_clk_pll_out*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.clk_hw* %0, %struct.clk_hw** %2, align 8
  %6 = load %struct.clk_hw*, %struct.clk_hw** %2, align 8
  %7 = call %struct.tegra_clk_pll_out* @to_clk_pll_out(%struct.clk_hw* %6)
  store %struct.tegra_clk_pll_out* %7, %struct.tegra_clk_pll_out** %3, align 8
  %8 = load %struct.tegra_clk_pll_out*, %struct.tegra_clk_pll_out** %3, align 8
  %9 = getelementptr inbounds %struct.tegra_clk_pll_out, %struct.tegra_clk_pll_out* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @readl_relaxed(i32 %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.tegra_clk_pll_out*, %struct.tegra_clk_pll_out** %3, align 8
  %14 = call i32 @pll_out_enb(%struct.tegra_clk_pll_out* %13)
  %15 = and i32 %12, %14
  %16 = icmp ne i32 %15, 0
  %17 = zext i1 %16 to i64
  %18 = select i1 %16, i32 1, i32 0
  store i32 %18, i32* %5, align 4
  %19 = load i32, i32* %4, align 4
  %20 = load %struct.tegra_clk_pll_out*, %struct.tegra_clk_pll_out** %3, align 8
  %21 = call i32 @pll_out_rst(%struct.tegra_clk_pll_out* %20)
  %22 = and i32 %19, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %1
  store i32 0, i32* %5, align 4
  br label %25

25:                                               ; preds = %24, %1
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local %struct.tegra_clk_pll_out* @to_clk_pll_out(%struct.clk_hw*) #1

declare dso_local i32 @readl_relaxed(i32) #1

declare dso_local i32 @pll_out_enb(%struct.tegra_clk_pll_out*) #1

declare dso_local i32 @pll_out_rst(%struct.tegra_clk_pll_out*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
